--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -34,7 +34,7 @@
   div.column{display: inline-block; vertical-align: top; width: 50%;}
   div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
   ul.task-list{list-style: none;}
-      </style>
+    </style>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -80,6 +80,7 @@ h6 {
   text-align: left;
 }
 </style>
+
 
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
@@ -287,7 +288,7 @@ $(document).ready(function () {
       <ul class="nav navbar-nav">
         <li>
   <a href="index.html">
-    <span class="fa fa-home"></span>
+    <span class="fas fa-home"></span>
      
     Home
   </a>
@@ -467,6 +468,13 @@ body {
 <li>Excel-Datensatz “Kontraste”: <a href="q1_dataFiles/08_Kontraste.xlsx">download</a></li>
 </ul>
 </div>
+<div id="sitzung-9-wilcoxon-rangsummentest" class="section level4">
+<h4>Sitzung 9: Wilcoxon-Rangsummentest</h4>
+<ul>
+<li>Excel-Datensatz “Therapie von Panikstörungen”: <a href="q1_dataFiles/10_Rangtests_Panik.xlsx">download</a></li>
+<li>Excel-Datensatz “Reaktion von Haustieren auf Lockdown”: <a href="q1_dataFiles/10_Rangtests_Haustiere.xlsx">download</a></li>
+</ul>
+</div>
 
 <p><font size="-1.5">Copyright &copy; 2020 Simon Stephan. All rights reserved.</font></p>
 
@@ -478,7 +486,7 @@ body {
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
